# video_game_sales

./: Home_Page.py  Makefile  pyproject.toml
pages/: 1_Data_Exploration.py  2_Data_Profiling.py  3_Data_Analysis.py
