[tool.poetry]
name = "video-game-sales"
version = "0.1.0"
description = ""
authors = ["Akash Chokshi"]
readme = "README.md"
packages = [{include = "video_game_sales"}]

[tool.poetry.dependencies]
python = "3.9.12"
pandas = "^1.5.3"
matplotlib = "3.6.0"
streamlit = "^1.20.0"
jupyter = "^1.0.0"
watchdog = "^2.3.1"
streamlit-extras = "^0.2.6"
streamlit-pandas-profiling = "^0.1.3"
pandas-profiling = "3.6.5"
opendatasets = "^0.1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
